# replpedia

./: README.md  database.py  main.py  pyproject.toml  tests.sh
static/: robots.txt  style.css
templates/: 404.html  base.html  create.html  edit.html  login.html  server_error.html  wiki.html
tests/: api.py
utils/: search.py  sitemap.py
