[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
name = "replpedia"
version = "0.1.0"
[tool.poetry.dependencies]
dnspython = "^1.16"
flask = "^1.1"
flask-minify = "^0.18.0"
markdown2 = "^2.3"
pymongo = "^3.10"
python = "^3.8"
[tool.poetry.dev-dependencies]
